--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
     <div class="product-grid">
         <div class="product-card">
-            <img src="C:\Users\Usuario\Desktop\Noticiero\Majorana-1-Microsoft-1536x864.jpg" alt="Producto 1" class="product-img"> 
+            <img src="image\Majorana-1-Microsoft-1536x864.jpg" alt="Producto 1" class="product-img"> 
             <div class="product-info">
                 <h3 class="product-titulo">Microsoft avanza en la computación cuántica</h3>
                 <p class="product-name">Majorana 1</p>
@@ -53,7 +53,7 @@
             </div>
                </div>
                <div class="product-card">
-                <img src="C:\Users\Usuario\Desktop\Noticiero\smart-watch-821559_1280.jpg" alt="Producto 1" class="product-img"> 
+                <img src="image\smart-watch-821559_1280.jpg" alt="Producto 1" class="product-img"> 
                 <div class="product-info">
                     <h3 class="product-titulo">Los smartwatches podrían prevenir futuras pandemias</h3>
                     <p class="product-name"> Relojes Inteligentes o smartwatches</p>
@@ -61,7 +61,7 @@
                 </div>
                    </div>
                    <div class="product-card">
-                    <img src="C:\Users\Usuario\Desktop\Noticiero\googleandrobots.jpg" alt="Producto 1" class="product-img"> 
+                    <img src="image\googleandrobots.jpg" alt="Producto 1" class="product-img"> 
                     <div class="product-info">
                         <h3 class="product-titulo"> Google se lanza a la carrera por los robots</h3>
                         <p class="product-name">Inteligencia artificial en robots</p>
